[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RETROVERSE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Arcade Multiplayer"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HostButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Join Game"

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Enter host IP (leave empty for local)"
alignment = 1

[node name="Status" type="Label" parent="VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[connection signal="pressed" from="VBox/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBox/JoinButton" to="." method="_on_join_pressed"]
